<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/menu_group1">
        <item
            android:id="@+id/item1"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/popup_menu_item_1" />
        <item
            android:id="@+id/item2"
            android:title="@string/popup_menu_item_2" />
        <item
            android:id="@+id/item3"
            android:title="@string/popup_menu_item_3">
            <menu>
                <item
                    android:id="@+id/submenu"
                    android:title="@string/submenu"
                />
            </menu>
        </item>
    </group>
    <group android:id="@+id/menu_group2">
        <item
            android:id="@+id/item4"
            android:checkable="true"
            android:checked="true"
            android:icon="@mipmap/ic_launcher"
            android:title="@string/popup_menu_item_4" />
        <item
            android:id="@+id/item5"
            android:title="@string/popup_menu_item_5"
            android:enabled="false" />
        <item
            android:id="@+id/item6"
            android:title="@string/popup_menu_item_6" />
    </group>
</menu>